--- a/composer.json
+++ b/composer.json
@@ -7,12 +7,12 @@
     "authors": [
         {
             "name": "Vincent Verbruggen",
-            "email": "info@tse-webdesign.be"
+            "email": "info@viavario.be"
         }
     ],
     "require": {},
     "require-dev": {
-        "phpunit/phpunit": "4.0.*"
+        "phpunit/phpunit": "4.8.*"
     },
     "autoload": {
         "psr-4": {
